@@ -1,3 +1,10 @@
+2004-10-16 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: First load gui and then scan devices, this resulted in way faster startup and is more satisfactory (imho)
+	  Also did some minor code cleanups and rearranged some functions needed for applying operations.
+	* src/Dialog_Progress.cc: few minor code cleanups.
+
 2004-10-14 Bart Hakvoort  <gparted@users.sf.net>
 
 	* include/Operation.h,
